--- a/theme.css
+++ b/theme.css
@@ -1,23 +1,23 @@
 /* Main Theme Colors */
-.w3-theme-l5 { color: #201e1f !important; background-color: #feefdd !important; }
-.w3-theme-l4 { color: #201e1f !important; background-color: #faaa8d !important; }
-.w3-theme-l3 { color: #201e1f !important; background-color: #ff4000 !important; }
+.w3-theme-l5 { color: #452929 !important; background-color: #feefdd !important; }
+.w3-theme-l4 { color: #452929 !important; background-color: #faaa8d !important; }
+.w3-theme-l3 { color: #452929 !important; background-color: #ff4000 !important; }
 .w3-theme-l2 { color: #feefdd !important; background-color: #50b2c0 !important; }
-.w3-theme-l1 { color: #feefdd !important; background-color: #201e1f !important; }
-.w3-theme-d1 { color: #feefdd !important; background-color: #201e1f !important; }
-.w3-theme-d2 { color: #feefdd !important; background-color: #201e1f !important; }
-.w3-theme-d3 { color: #feefdd !important; background-color: #201e1f !important; }
-.w3-theme-d4 { color: #feefdd !important; background-color: #201e1f !important; }
-.w3-theme-d5 { color: #feefdd !important; background-color: #201e1f !important; }
+.w3-theme-l1 { color: #feefdd !important; background-color: #452929 !important; }
+.w3-theme-d1 { color: #feefdd !important; background-color: #452929 !important; }
+.w3-theme-d2 { color: #feefdd !important; background-color: #452929 !important; }
+.w3-theme-d3 { color: #feefdd !important; background-color: #452929 !important; }
+.w3-theme-d4 { color: #feefdd !important; background-color: #452929 !important; }
+.w3-theme-d5 { color: #feefdd !important; background-color: #452929 !important; }
 
 .w3-theme-light { color: #000 !important; background-color: #feefdd !important; }
-.w3-theme-dark { color: #feefdd !important; background-color: #201e1f !important; }
+.w3-theme-dark { color: #feefdd !important; background-color: #452929 !important; }
 .w3-theme-action { color: #feefdd !important; background-color: #ff4000 !important; }
 
-.w3-theme { color: #feefdd !important; background-color: #201e1f !important; }
-.w3-text-theme { color: #201e1f !important; }
-.w3-border-theme { border-color: #201e1f !important; }
+.w3-theme { color: #feefdd !important; background-color: #452929 !important; }
+.w3-text-theme { color: #452929 !important; }
+.w3-border-theme { border-color: #452929 !important; }
 
 .w3-hover-theme:hover { color: #feefdd !important; background-color: #ff4000 !important; }
-.w3-hover-text-theme:hover { color: #201e1f !important; }
-.w3-hover-border-theme:hover { border-color: #201e1f !important; }
+.w3-hover-text-theme:hover { color: #452929 !important; }
+.w3-hover-border-theme:hover { border-color: #452929 !important; }
